[tool.poetry]
name = "fiber-py"
version = "0.4.0"
description = "Python client for connecting to the Fiber API"
authors = ["Jonas Bostoen <jonas.bostoen@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "fiber" }]

[tool.poetry.dependencies]
python = "^3.9"
grpcio = "^1.71.0"
grpcio-tools = "^1.71.0"
eth-typing = "^5.2.1"
eth-utils = "^5.3.0"
web3 = "7.10.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
